update: glowing see portfolio button and iphone scroll portfolio flicker fix

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -3,7 +3,7 @@
 .portfolio__wrapper {
     position: fixed;
     top: 0;
-    transform: translateY(100%);
+    transform: translateY(130%);
     background-color: $white;
     border-top: solid 1px $blue;
     width: 100%;
