--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -57,14 +57,19 @@ html {
 }
 
 body {
-
     margin: 0px;
     background-color: $light;
     font-family: var(--nhFont);
     color: $dark;
     cursor: url("/cursor.svg") 0 0,
         default;
+
+    &.stop-scrolling {
+        height: 0px;
+        overflow: hidden;
+    }
 }
+
 
 ul {
     list-style-type: none;
@@ -95,7 +100,9 @@ a {
 }
 
 p,
-a, span, li {
+a,
+span,
+li {
     font-size: 1.4rem;
 
     @include sm {
